*
* 1.2.16
*

- Fixed database upgrade issues
- Fixed packaging issues
- Fixed bug causing outdated peer information on interface objects
- Instance display name for DCIs created via instance discovery
- DCIs created via instance discovery can be combined by instance into one chart on performance tab
- Transformation script terminated by "abort" call will not generate SYS_SCRIPT_ERROR event
- Database manager can detect and fix missing IData and TData tables
- NXSL:
   - String concatenation operation interprets NULL value as empty string instead of throwing runtime error
   - Fixed incorrect processing of ilike, match, and imatch operators
   - Added try / catch operator
- Fixed issues: #424, #618, #619, #620


*
* 1.2.15
*

- LDAP support
- Event names support in nxevent
- Previous state parameter added to SYS_NODE_UP event 
- Added file management subagent (filemgr.nsm) 
- Removed agent configuration parameter EnableArbitraryFileUpload
- New NXSL class "Zone"
- New attributes "zone" and "zoneId" in NXSL classes "Node" and "Interface"
- Syslog records from unmanaged nodes do not generate events
- Syslog node matching improved
- New access rights for nodes: 
   - Download File (download file from agent to local workstation)
   - Upload File (upload file from local workstation to remote node) 
   - Manage Files (move, rename and delete files on remote node)
- Management console:
   - "Commands" box on node overview page made configurable
   - Object tools can have icons
   - "Last value" type gauge can show non-numeric values
   - "Trusted Nodes" property page shown for condition objects
   - Network map content can be copied to clipboard
   - Perspectives export/import
   - Topology related options in node's context menu grouped in "Topology" submenu
   - Added specialized view for IP routing table
   - Added specialized view for switch forwarding database
   - Agent configurations manager implemented
- Android Console: